V4.1.3 (in progress)
[BUG] : Correct bugs numbers: 1860, 2021 (see http://www.automne-cms.org/bug/)
[BUG] : Correct a bug with atm-search-param tag when search type is item and value is block
[BUG] : Users can set categories or pages rights above their own. They can also set grups denied even if they do not have rights for it.

V4.1.2 (12/04/2011)
[BUG] : Correct bugs numbers: 1916, 1860, 1861, 1837 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update upload file whitelist
[REFACTOR] : Change session token max age from 600  to 1800 seconds
[REFACTOR] : Update phpMyAdmin to version 3.3.10
[REFACTOR] : Add links to access users / groups properties from all users/groups management listing
[REFACTOR] : Move VERSION and CHANGELOG files into /automne folder
[REFACTOR] : Automne passwords are now stored with sha1 hashing method (more secure)
[REFACTOR] : Handle language code of 5 characters
[REFACTOR] : Change email addresses validation to ensure they are properly validated according to the standards
[REFACTOR] : Remove User Agent checking for sessions to stabilize session persistence on some browser with variable UA
[REFACTOR] : Refactor windows background scripts execution to use COM component
[FEATURE] : Add logs for all actions done on polymod objects which are not subject to validation
[FEATURE] : Add direct access to rows and templates help links in side panel
[FEATURE] : Add website specific 403 and 404 pages
[FEATURE] : Allow combo search in categories selection in polymod edition
[FEATURE] : Allow combo search in users/groups selection in polymod edition
[FEATURE] : Allow combo search in subobjects selection in polymod edition
[FEATURE] : Add timestamp var to polymod date fields
[FEATURE] : Add a check on .htaccess files support
[FEATURE] : Add user activity log from user properties

V4.1.1 (08/03/2011)
[BUG] : Correct bugs numbers: 1742, 1746, 1715, 1753, 1757, 1758 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update JSMin to last version available